--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
+    "react-scroll": "^1.9.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
