--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
     "react-scroll": "^1.9.0",
+    "react-transition-group": "^4.4.5",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
